OldArchive/260869f4d343799c8a1aeda5f909569d-cc73e281b3b6abc9bf6cf4f153b944a6/output
+ g++ -std=c++11 main.cpp -O3
main.cpp: In function ‘int main()’:
main.cpp:11:13: error: call of overloaded ‘foo(A&, int)’ is ambiguous
     foo(a, 4); //error: call of overloaded ‘foo(A&, int)’ is ambiguous
             ^
main.cpp:11:13: note: candidates are:
main.cpp:6:6: note: void foo(A, A)
 void foo(A, A) {}
      ^
main.cpp:7:6: note: void foo(int, int)
 void foo(int, int) {}
      ^
